--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,7 @@
         <module>common</module>
         <module>model</module>
         <module>service</module>
+        <module>server-gateway</module>
     </modules>
 
     <parent>
