--- a/service/service-list/pom.xml
+++ b/service/service-list/pom.xml
@@ -3,30 +3,32 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>web</artifactId>
+        <artifactId>service</artifactId>
         <groupId>com.my.gmall</groupId>
         <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>web-all</artifactId>
+    <artifactId>service-list</artifactId>
 
     <dependencies>
-        <dependency>
-            <groupId>com.my.gmall</groupId>
-            <artifactId>service-item-client</artifactId>
-            <version>1.0</version>
-        </dependency>
         <dependency>
             <groupId>com.my.gmall</groupId>
             <artifactId>service-product-client</artifactId>
             <version>1.0</version>
         </dependency>
+
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-elasticsearch</artifactId>
+        </dependency>
+
     </dependencies>
 
 
     <build>
-        <finalName>web-all</finalName>
+        <finalName>service-list</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
@@ -34,7 +36,6 @@
             </plugin>
         </plugins>
     </build>
-
 
 
 </project>
