--- a/service/service-item/pom.xml
+++ b/service/service-item/pom.xml
@@ -17,6 +17,11 @@
             <artifactId>service-product-client</artifactId>
             <version>1.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.my.gmall</groupId>
+            <artifactId>service-list-client</artifactId>
+            <version>1.0</version>
+        </dependency>
     </dependencies>
 
     <build>
