--- a/service-client/pom.xml
+++ b/service-client/pom.xml
@@ -14,6 +14,8 @@
     <modules>
         <module>service-product-client</module>
         <module>service-item-client</module>
+        <module>service-list-client</module>
+        <module>service-cart-client</module>
     </modules>
 
     <dependencies>
