--- a/service/service-list/src/main/resources/application-dev.yml
+++ b/service/service-list/src/main/resources/application-dev.yml
@@ -2,6 +2,9 @@ server:
   port: 8203
 
 spring:
+  jackson:
+    date-format: yyyy-MM-dd HH:mm:ss
+    time-zone: GMT+8
   cloud:
     sentinel:
       transport:
